[package]
name = "prop-engine-sb-contracts"
version = "0.3.0"
edition = "2021"

[features]

default = [
]

account-registration = []
payment-order = []
trader-account-creation = []
trader-account-status-update = []
account-balance-update = []
trading-scenario-update = []
metatrader-scenario-update = []
account-kyc-update = []
metatrader-account-open-position = []
metatrader-account-delete = []
sumsub-status-update = []
metatrader-eod-update = []
client-live-account-contract = []
client-kyc-update = []


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service-sdk = { tag = "0.2.4", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "my-service-bus",
    "macros",
] }

prost = "*"
prost-types = "*"
