[package]
name = "prop-engine-sb-contracts"
version = "0.4.0"
edition = "2021"

[features]

default = []

#use it to check that this crate is correct
all = [
    "account-registration",
    "payment-order",
    "trader-account-creation",
    "trader-account-blocked",
    "trader-account-status-update",
    "account-balance-update",
    "trading-scenario-update",
    "metatrader-scenario-update",
    "account-kyc-update",
    "sumsub-status-update",
    "metatrader-eod-update",
    "client-live-account-contract",
    "client-kyc-update",
    "payout-status-update",
    "profit-release-update",
    "personal-data-update",
    "metatrader-position",
    "metatrader-balance",
    "metatrader-account",
    "woocommerce-order-update",
]

account-registration = []
payment-order = []
trader-account-creation = []
trader-account-blocked = []
trader-account-status-update = []
account-balance-update = []
trading-scenario-update = []
metatrader-scenario-update = []
account-kyc-update = []
sumsub-status-update = []
metatrader-eod-update = []
client-live-account-contract = []
client-kyc-update = []
payout-status-update = []
profit-release-update = []
personal-data-update = []
metatrader-position = []
metatrader-balance = []
metatrader-account = []
woocommerce-order-update = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service-sdk = { tag = "0.2.5", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "my-service-bus",
    "macros",
] }

prost = "*"
prost-types = "*"
