[package]
name = "prop-engine-sb-contracts"
version = "0.6.0"
edition = "2021"

[features]

default = []

#use it to check that this crate is correct
all = [
    "account-registration",
    "payment-order",
    "trader-account-creation",
    "trader-account-blocked",
    "trader-account-status-update",
    "account-balance-update",
    "trading-scenario-update",
    "metatrader-scenario-update",
    "account-kyc-update",
    "sumsub-status-update",
    "kyc-webhook-update",
    "metatrader-eod-update",
    "client-live-account-contract",
    "client-kyc-update",
    "payout-status-update",
    "profit-release-update",
    "personal-data-update",
    "metatrader-position",
    "metatrader-balance",
    "metatrader-account",
    "woocommerce-order-update",
    "payment-order-trader-account-created",
    "account-password-changed",
    "woocommerce-external-order-update",
    "news-violations-restrictions",
    "manual-trader-account-creation",
    "acqufy-order-click",
    "acqufy-client-click",
    "system-audit-log",
    "trader-account-reactivated",
    "trader-account-balance-correction",
    "trading-platform-deposit",
    "trading-platform-withdrawal",
]

account-registration = []
payment-order = []
trader-account-creation = []
trader-account-blocked = []
trader-account-status-update = []
account-balance-update = []
trading-scenario-update = []
metatrader-scenario-update = []
account-kyc-update = []
sumsub-status-update = []
kyc-webhook-update = []
metatrader-eod-update = []
client-live-account-contract = []
client-kyc-update = []
payout-status-update = []
profit-release-update = []
personal-data-update = []
metatrader-position = []
metatrader-balance = []
metatrader-account = []
woocommerce-order-update = []
payment-order-trader-account-created = []
account-password-changed = []
woocommerce-external-order-update = []
news-violations-restrictions = []
manual-trader-account-creation = []
acqufy-order-click = []
acqufy-client-click = []
system-audit-log = []
trader-account-reactivated=[]
trader-account-balance-correction=[]
trading-platform-deposit=[]
trading-platform-withdrawal=[]
trader-account-block-status-update = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service-sdk = { tag = "0.3.0", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "my-service-bus",
    "macros",
] }

prost = "*"
prost-types = "*"
